force-app/main/default/objects/GPMS_Delegate_Positions__mdt/GPMS_Delegate_Positions__mdt.object-meta.xml
<CustomObject>
    <description>Delegate Positions Based on State</description>
    <label>Delegate Positions</label>
    <pluralLabel>Delegate Positions</pluralLabel>
</CustomObject>