force-app/main/default/objects/GPMS_Delegate_Positions__mdt/fields/GPMS_Position_Title__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Position_Title__c</fullName>
    <description>Position Title</description>
    <label>Position Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>