force-app/main/default/objects/GPMS_Delegate_Positions__mdt/fields/GPMS_State__c.field-meta.xml
<CustomField>
    <fullName>GPMS_State__c</fullName>
    <label>State</label>
    <length>20</length>
    <type>Text</type>
</CustomField>